// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Separator UI — Snapshot renders default horizontal separator 1`] = `
<div>
  <div
    class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
    data-orientation="horizontal"
    data-slot="separator"
    role="none"
  />
</div>
`;

exports[`Separator UI — Snapshot renders separator with custom class 1`] = `
<div>
  <div
    class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-primary h-1"
    data-orientation="horizontal"
    data-slot="separator"
    role="none"
  />
</div>
`;

exports[`Separator UI — Snapshot renders vertical separator 1`] = `
<div>
  <div
    class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
    data-orientation="vertical"
    data-slot="separator"
    role="none"
  />
</div>
`;
